--- a/package.json
+++ b/package.json
@@ -4,24 +4,28 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --prod --stats-json",
+    "bundle-report": "webpack-bundle-analyzer dist/stats.json",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
+    "@angular/animations": "^4.2.5",
+    "@angular/cdk": "^2.0.0-beta.8",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
+    "@angular/material": "^2.0.0-beta.8",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "foundation-sites": "^6.4.1",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.12"
   },
@@ -33,6 +37,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.1.1",
+    "github-pages": "^3.0.2",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -44,6 +49,26 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "webpack-bundle-analyzer": "^2.8.2"
+  },
+  "github-pages": {
+    "auth": {
+      "type": "token",
+      "token": "GH_TOKEN"
+    },
+    "remote": {
+      "user": "user",
+      "repo": "repo",
+      "ref": "heads/gh-pages"
+    },
+    "commit": {
+      "message": "commit made by me",
+      "author": {
+        "name": "author-name",
+        "email": "author-email"
+      }
+    },
+    "src": "./data"
   }
 }
