--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "build:prod": "ng build --prod --stats-json",
     "bundle-report": "webpack-bundle-analyzer dist/stats.json",
+    "gh-pages": "github-pages -r dennishn/project-starter -t db845c7dae8f1a80c0194db1b1f1a2f9d365a8d1 ./dist",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -51,24 +52,5 @@
     "tslint": "~5.3.2",
     "typescript": "~2.3.3",
     "webpack-bundle-analyzer": "^2.8.2"
-  },
-  "github-pages": {
-    "auth": {
-      "type": "token",
-      "token": "GH_TOKEN"
-    },
-    "remote": {
-      "user": "user",
-      "repo": "repo",
-      "ref": "heads/gh-pages"
-    },
-    "commit": {
-      "message": "commit made by me",
-      "author": {
-        "name": "author-name",
-        "email": "author-email"
-      }
-    },
-    "src": "./data"
   }
 }
